@@ -109,7 +109,7 @@ class ConfigParser:
 
         #: Default configuration sections and values
         self.defaultoptions = (
-                {'server': (('port', 8000), ('notify', notifyavailable))},
+                {'server': (('port', 8000), ('authentication', True), ('username', 'user'), ('password', 'password'), ('notify', notifyavailable))},
                 {'screenshot': (('format', 'jpeg'), ('quality', 30), ('path', save_path), ('currentwindow', False), ('scale', False), ('scalepercent', 100))},
                 {'html': (('html', '<html><body><img src="screenshot" alt="If you are seeing this message it means there was an error in Itaka or you are using a text-only browser." border="0"></a></body</html>'),)})
 
